@@ -227,6 +227,11 @@ $labels['showinlineimages'] = 'Display attached images below the message';
 $labels['autosavedraft'] = 'Automatically save draft';
 $labels['everynminutes'] = 'every $n minutes';
 $labels['never'] = 'never';
+$labels['mimeparamfolding'] = 'Attachment names';
+$labels['2231folding'] = 'Full RFC 2231 (Thunderbird)';
+$labels['miscfolding'] = 'RFC 2047/2231 (MS Outlook)';
+$labels['2047folding'] = 'Full RFC 2047 (other)';
+$labels['advancedoptions'] = 'advanced options';
 $labels['messagesdisplaying'] = 'Displaying messages';
 $labels['messagescomposition'] = 'Composing messages';
 $labels['folder'] = 'Folder';
