@@ -284,6 +284,11 @@ $labels['everynminutes']  = 'every $n minutes';
 $labels['never']  = 'never';
 $labels['messagesdisplaying'] = 'Displaying messages';
 $labels['messagescomposition'] = 'Composing messages';
+$labels['mimeparamfolding'] = 'Attachment names';
+$labels['2231folding'] = 'Full RFC 2231 (Thunderbird)';
+$labels['miscfolding'] = 'RFC 2047/2231 (MS Outlook)';
+$labels['2047folding'] = 'Full RFC 2047 (other)';
+$labels['advancedoptions'] = 'advanced options';
 
 $labels['folder']  = 'Folder';
 $labels['folders']  = 'Folders';
